--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "express-locallibrary-tutorial",
   "version": "0.0.0",
-  "engines": {
-    "node": ">=20.10.0"
-  },
+  "engines": { "node": ">=20.10.0" },
+  "description": "NodeJs, Express, pug & MongoDB - CRUD",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
